Alteracoes no back e front